--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,17 @@
-Package: QDNAseq.hg38
+Package: QDNAseq.hs1
 Type: Package
-Title: QDNAseq bin annotation for hg38
-Version: 1.1.0
-Date: 2020-11-15
-Author: Aziz Khan
-Maintainer: Aziz Khan <azizk@stanford.edu>
+Title: QDNAseq bin annotation for hs1
+Version: 1.0
+Date: 2025-12-21
+Author: Ben Wesley
+Encoding: UTF-8
+Maintainer: Ben Wesley <bkw2118@columbia.edu>
 Description: This package provides QDNAseq bin annotations for the
-        human genome build hg38.
+        human genome build hs1.
 Depends: R (>= 3.2.1), QDNAseq
 biocViews: ExperimentData, OrganismData, Homo_sapiens_Data
 License: GPL
-URL: https://github.com/asntech/QDNAseq.hg38
-BugReports: https://github.com/asntech/QDNAseq.hg38/issues
+URL: https://github.com/GastroEsoLab/QDNAseq.hs1
+BugReports: https://github.com/GastroEsoLab/QDNAseq.hs1/issues
 NeedsCompilation: no
-RoxygenNote: 7.0.2
+RoxygenNote: 7.2.3
